--- a/taskly-app/src/styles/board/board-page-style.scss
+++ b/taskly-app/src/styles/board/board-page-style.scss
@@ -56,29 +56,16 @@
                         padding: 0;
                         margin: 0;
 
-                        textarea {
-                            width: 100%;
-                            max-width: 100%;
-                            background-color: white;
-                            border: none;
-                            border-radius: 10px;
-                            font-size: 17px;
-                            box-sizing: border-box;
-                            color: black;
-                            outline: none;
-                            resize: none;
-                        }
-
                         p {
                             width: 100%;
                             font-size: 17px;
                             text-align: start;
+                            word-wrap: break-word;
                         }
-
                     }
 
 
-                    div.card-information {
+                    .card-information {
                         width: 100%;
                         height: 40px;
                         display: flex;
@@ -211,6 +198,53 @@
 
                     }
 
+
+
+                }
+
+                .create-card-buttons {
+                    width: 100%;
+                    //height: 50px;
+                    display: flex;
+
+                    button {
+                        width: 100%;
+                        //height: 100%;
+                        background-color: #641acc;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        column-gap: 10px;
+                        padding: 15px;
+                        box-sizing: border-box;
+                        border: none;
+                        outline: none;
+                        cursor: pointer;
+
+                        img {
+                            width: 30px;
+                            height: 30px;
+                        }
+
+                        p {
+                            margin: 0;
+                            font-size: 15px;
+                            color: white;
+                        }
+
+                        &:hover {
+                            background-color: #6822ca;
+                        }
+
+                        &:first-child {
+                            border-radius: 10px 0px 0px 10px;
+                        }
+
+                        &:last-child {
+                            border-radius: 0px 10px 10px 0px;
+                        }
+
+                    }
 
 
                 }
